@@ -1,3 +1,8 @@
+2007-11-29  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Signal.cs: ignore GCHandles with null targets since
+	their object has been collected.  [Fixes #344250 again]
+
 2007-11-28  Mike Kestner  <mkestner@novell.com>
 
 	* glib/Object.cs: take ref using method param to avoid
